@@ -2,7 +2,7 @@
 #	x86 kernel low-level entry points
 #
 
-obj-y := entry_$(BITS).o
+obj-y := common.o entry_$(BITS).o
 
 # for debug
 extra-y := entry_$(BITS).i
